assign defect type to user added