@@ -25,30 +25,30 @@ import java.util.stream.Collectors;
 public class CourseService {
 
     private final UserJpaRepository userJpaRepository;
-    private final UserDefectTypeRepository userDefectTypeRepository;
     private final CourseRepository courseRepository;
     private final UnitRepository unitRepository;
     private final ExerciseRepository exerciseRepository;
     private final UserCourseProgressRepository userCourseProgressRepository;
     private final UserUnitProgressRepository userUnitProgressRepository;
     private final NextStepService nextStepService;
+    private final UserDefectTypeService userDefectTypeService;
 
     public List<CourseShortResponse> getCoursesForUser(UUID userId) {
-        UserDefectType userDefectType = getUserDefectTypeOrThrow(userId);
+        DefectType defect = getUserDefect(userId);
 
-        return courseRepository.findByDefectTypeId(userDefectType.getDefectType().getId())
+        return courseRepository.findByDefectTypeId(defect.getId())
                 .stream()
                 .map(course -> new CourseShortResponse(
                         course.getId(),
                         course.getTitle()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CourseFullResponse getCourseForUser(UUID userId, UUID courseId) {
 
-        UserDefectType userDefectType = getUserDefectTypeOrThrow(userId);
-        Course course =  getCourseOrThrow(courseId, userDefectType);
+        DefectType defect = getUserDefect(userId);
+        Course course =  getCourseOrThrow(courseId, defect);
         UserCourseProgress progress = userCourseProgressRepository.findByUserIdAndCourseId(userId, courseId)
                 .orElse(null);
 
@@ -67,11 +67,13 @@ public class CourseService {
         );
     }
 
-   @Transactional
+
+
+    @Transactional
     public NextStepResponse startCourse(UUID userId, UUID courseId) {
         User user = getUserOrThrow(userId);
-        UserDefectType userDefectType = getUserDefectTypeOrThrow(userId);
-        Course course =  getCourseOrThrow(courseId, userDefectType);
+        DefectType defect= getUserDefect(userId);
+        Course course =  getCourseOrThrow(courseId, defect);
 
         List<Unit> units = getUnits(courseId);
         Optional<UserCourseProgress> progress = userCourseProgressRepository.findByUserIdAndCourseId(userId, courseId);
@@ -180,20 +182,19 @@ public class CourseService {
         return unitRepository.findByCourseIdOrderByOrderIndex(courseId);
     }
 
-    private Course getCourseOrThrow(UUID courseId, UserDefectType userDefectType) {
+    private Course getCourseOrThrow(UUID courseId, DefectType defect) {
         Course course = courseRepository.findById(courseId)
                 .orElseThrow(() -> new NotFoundException("Course not found"));
 
         if (!course.getDefectType().getId()
-                .equals(userDefectType.getDefectType().getId())) {
+                .equals(defect.getId())) {
             throw new ForbiddenException("Course does not belong to user's defect type");
         }
         return course;
     }
 
-    private UserDefectType getUserDefectTypeOrThrow(UUID userId) {
-        return userDefectTypeRepository.findByUserId(userId)
-                .orElseThrow(() -> new NotFoundException("User defect type not found"));
+    private DefectType getUserDefect(UUID userId) {
+        return userDefectTypeService.getUserDefectOrThrow(userId);
     }
 
     private User getUserOrThrow(UUID userId) {
